[project]
name = "fithub"
version = "2.0.0"
description = "FITHUB - Connect to Fitness: Advanced Fitness Tracking with Trainer Plans, Subscriptions, Follow System, and Real-time Chat"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
